# Browars

./: BuildDir.var  CMakeLists.txt  LICENSE  README.md  SourceDir.var  main.cpp
assets/planets/: planets.csv
assets/textures/characters/basic/: characters.csv
assets/textures/characters/heroes/: characters.csv
include/browars/: button.hpp  game_loop.hpp  gamestage.hpp  init.hpp  space_bg.hpp
include/browars/gui/: gui.hpp  intro.hpp  main_menu.hpp  not_supported.hpp  planet.hpp  select_character.hpp  select_region.hpp  singleplayer.hpp
src/: button.cpp  game_loop.cpp  init.cpp
src/gui/: gui.cpp  intro.cpp  main_menu.cpp  not_supported.cpp  select_character.cpp  select_region.cpp  singleplayer.cpp
